/*
 * $Id: ChangeLog,v 1.4752 2006/01/16 20:46:56 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-01-16 14:45 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * Added missing hb_ole prefix to exported C functions.

2006-01-16 12:45 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * Fixed bug related to Enumerators, resulting from global s&r

2006-01-16 18:41 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * include/hbver.h
  * xharbour.spec
  * bin/pack_bin.bat
  * bin/pack_src.bat
    * Prepared for 0.99.60

2006-01-15 19:36 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * Minor revisions and optimizations
    * Change LOCALE_USER_DEFAULT to LOCALE_SYSTEM_DEFAULT, as per MS code samples
  * tests/testole.prg
    * Typo, and reset 1 display flag to non modal.

2006-01-15 20:55 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/codepage/cppt850.c
    + added ASCII 166 and 167 chars to portuguese codepage table.
  * source/codepage/cpptiso.c
    + added ANSI 170 and 176 chars to portuguese codepage table.

2006-01-16 09:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/win32prn.prg
    * Change HB_FUNC_STATIC( LOADBITMAPFILE ) to work with
      bitmaps created by freeimage as requested by Luiz

2006-01-15 01:40 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * source/rtl/dbsdf.prg
  * fixes problem reporte by Bradley Bell when using append from file for condition SDF

2006-01-14 15:07 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/compiler/harbour.sly
    * LineStat value for #line directive changed to 0 (no coding impact)
  * source/rtl/win32ole.prg
    * Minor optimization
  * source/vm/dynsym.c
    * Compile error of HB_EXPORT
