@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4752 2006/01/16 20:46:56 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.4753 2006/01/16 22:45:47 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-01-16 16:45 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
+  * source/rtl/errorsys.prg
+    ! Fixed GPF in handing of GPF interception handlers related to obsolete hb_dynsymFindFromFunction()
+  * source/vm/dynsym.c
+    - Removed obsolete hb_dynsymFindFromFunction*()
 
 2006-01-16 14:45 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
   * source/rtl/win32ole.prg
